<resources>
    <string name="app_name">Kitapxanam</string>

    <string name="home">Uy</string>
    <string name="saved">Juklengenler</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="kitapxanam">Kitapxanam</string>
    <string name="start_reading">Oqiwdi baslaw</string>
    <string name="usinislar">Bizge qandayda bir pikir yaki usınıslarıńız bolsa jazıp qaldırıń.</string>
    <string name="mag_lumat">Mag\'lumat</string>




    <string name="trash">Trash</string>
    <string name="title">Siz %s kitapti o\'shiriwdi qa\'leysizbe?</string>
    <string name="reminder">Reminder</string>
    <string name="title_edit">Title</string>
    <string name="content">Content</string>
    <string name="delete_note">Delete Note</string>
    <string name="recover_note">Recover Note</string>
    <string name="cancel">Cancel</string>
    <string name="okay">Okay</string>
    <string name="add">Add</string>
    <string name="light_mode">Light Mode</string>
    <string name="settings">Settings</string>
    <string name="search">Izlew</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="note_title">Note Title</string>
    <string name="note_content">Note Content</string>
    <string name="note_date">Note Date</string>
    <string name="pin">Pin</string>
    <string name="delete">Delete</string>
    <string name="you_want_to_delete_all_notes">You want to delete all notes?</string>
    <string name="no">No</string>
    <string name="men_haqqimda">Bul programma Mamanov Dinmuhammed ta\'repinen
        Gita dasturlash akademiyasinda o\'qip jurgen waqtinda duzildi.Qa\'te kemshilikler bolsa
        <a href="https://t.me/dimamamann"> @dimamaman </a> menen baylanisin\'
    </string>
    <string name="info">Info</string>
    <string name="ok">Ok</string>
    <string name="saylandilar">Juklengenler</string>
    <string name="saylandilarda_kitap_joq">Juklengenlerde kitap joq</string>
    <string name="juklewdi_baslaw">Juklewdi Baslaw</string>
    <string name="telegram">Telegram</string>
    <string name="instagram">Instagram</string>
    <string name="link">Nomer yaki telegram @link</string>
    <string name="jiberiw">Jiberiw</string>
    <string name="jiberildi">Jiberildi</string>
    <string name="taza_kitaplar">Taza kitaplar</string>
    <string name="taza_kitaplar_ele_qosilmadi">Taza kitaplar ele qosilmadi</string>
</resources>