<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey2"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:background="@color/light_grey2"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_grey2"
            android:layout_marginBottom="16dp"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:elevation="4dp"
                app:layout_collapseMode="pin">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile"
                        android:textSize="24sp"
                        android:gravity="center_horizontal"
                        android:layout_alignParentStart="true"
                        android:fontFamily="@font/sf_pro_semi_bold"
                        android:textColor="@color/black"/>

                </RelativeLayout>


            </androidx.appcompat.widget.Toolbar>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/control_view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:background="@color/light_grey2"
                app:layout_collapseMode="parallax">



                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="0dp"
                    android:layout_height="400dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/profil_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/sf_pro_semi_bold"
                    android:textSize="24sp"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_image" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/profil_telegram"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/bg_search_view"
                    android:drawableStart="@drawable/telegram"
                    android:paddingLeft="10dp"
                    android:text="@string/telegram"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/profil_instagram"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profil_title" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/profil_instagram"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/bg_search_view"
                    android:drawableStart="@drawable/instagram"
                    android:paddingLeft="10dp"
                    android:text="@string/instagram"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/profil_telegram"
                    app:layout_constraintTop_toBottomOf="@+id/profil_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey2"
        android:paddingHorizontal="4dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@color/light_grey2"
            android:layout_height="match_parent">




            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/profile_send_message"
                app:layout_constraintEnd_toEndOf="@id/profile_send_message"
                app:layout_constraintBottom_toBottomOf="@id/profile_send_message"
                app:layout_constraintTop_toTopOf="@id/profile_send_message"/>


            <TextView
                android:id="@+id/profil_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:textColor="@color/black"
                android:fontFamily="@font/sf_pro_semi_bold"
                android:textSize="18sp"
                android:textAlignment="center"
                android:paddingHorizontal="8dp"
                app:layout_constraintBottom_toTopOf="@+id/view2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="8dp"
                android:background="@color/light_grey2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profil_description"
                app:layout_constraintBottom_toTopOf="@id/textView4"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextText"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/shape_editname"
                android:ems="10"
                android:hint="@string/link"
                android:inputType="text"
                android:padding="10dp"
                app:layout_constraintBottom_toTopOf="@+id/editTextText2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextText2"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/shape_editdescription"
                android:ems="10"
                android:hint="Pikirińizdi usı jerde jazıp qaldırıń..."
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:gravity="top|start"
                app:layout_constraintBottom_toTopOf="@+id/profile_send_message"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextText" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/sf_pro_semi_bold"
                android:text="@string/usinislar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view2" />


            <FrameLayout
                android:id="@+id/profile_send_message"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="316dp"
                android:background="@drawable/bg_to_read_btn"
                android:gravity="center_vertical"
                android:paddingHorizontal="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:layout_editor_absoluteX="8dp">

                <TextView
                    android:id="@+id/jiberiw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_pro_semi_bold"
                    android:text="@string/jiberiw"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <ProgressBar
                    android:id="@id/progress"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/jiberildi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_pro_semi_bold"
                    android:text="@string/jiberildi"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:visibility="gone" />
            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/empty_list"
        tools:visibility="gone"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:background="@color/light_grey2"
        android:layout_gravity="center"
        android:gravity="center">
        <ImageView
            android:id="@+id/img_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:src="@drawable/emptylist"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/txt_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Xatolik"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="center"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.coordinatorlayout.widget.CoordinatorLayout>