<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_grey3"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:background="@color/light_grey3"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/light_grey3"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:elevation="4dp"
                app:layout_collapseMode="pin">

                <!--<androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/btn_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:padding="8dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="?android:selectableItemBackgroundBorderless"
                        android:src="@drawable/ic_left" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mag_lumat"
                        android:textSize="20sp"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center"
                        android:fontFamily="@font/sf_pro_semi_bold"
                        android:textColor="@color/black"/>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="end"
                        android:src="@drawable/share"
                        android:paddingHorizontal="5dp"/>

                </androidx.appcompat.widget.LinearLayoutCompat>-->

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/btn_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_centerVertical="true"
                        android:background="?android:selectableItemBackgroundBorderless"
                        android:src="@drawable/ic_left" />


                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mag_lumat"
                        android:textSize="20sp"
                        android:gravity="center_horizontal"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/sf_pro_semi_bold"
                        android:textColor="@color/black"/>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_share"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/share"
                        android:layout_margin="8dp"
                        android:clickable="true"
                        android:visibility="invisible"
                        android:focusable="true"
                        android:background="?android:selectableItemBackgroundBorderless"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:paddingHorizontal="5dp"/>

                </RelativeLayout>

            </androidx.appcompat.widget.Toolbar>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:background="@color/light_grey3"
                app:layout_collapseMode="parallax">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view"
                    android:layout_width="250dp"
                    android:layout_height="0dp"
                    app:layout_constraintDimensionRatio="1:1.2"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:padding="4dp"
                    app:layout_wrapBehaviorInParent="included"
                    app:layout_collapseMode="parallax"
                    app:cardCornerRadius="10dp"
                    app:layout_collapseParallaxMultiplier="0.7"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/book_image"
                        />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/txt_klass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/amiko"
                    android:text="325 Review"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/card_view"
                    app:layout_constraintStart_toStartOf="@+id/card_view"
                    app:layout_constraintTop_toBottomOf="@+id/card_view" />

                <TextView
                    android:id="@+id/txt_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/amiko"
                    android:text="A Year without you"
                    android:textColor="@color/black"
                    android:textSize="34sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/card_view"
                    app:layout_constraintStart_toStartOf="@+id/card_view"
                    app:layout_constraintTop_toBottomOf="@id/txt_klass" />


                <TextView
                    android:id="@+id/txt_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/amiko"
                    android:text="A Year without you"
                    android:textColor="@color/onBackground"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/card_view"
                    app:layout_constraintStart_toStartOf="@+id/card_view"
                    app:layout_constraintTop_toBottomOf="@+id/txt_title" />


                <TextView
                    android:id="@+id/txt_date"
                    android:gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@+id/card_view"
                    app:layout_constraintStart_toStartOf="@+id/card_view"
                    app:layout_constraintTop_toBottomOf="@+id/txt_year"
                    android:text="29.04.2022" />


<!--                <ProgressBar-->
<!--                    android:id="@+id/progress"-->
<!--                    android:elevation="6dp"-->
<!--                    android:layout_width="60dp"-->
<!--                    android:layout_height="60dp"-->
<!--                    android:layout_gravity="center"-->
<!--                    app:layout_constraintBottom_toBottomOf="@+id/download_btn"-->
<!--                    app:layout_constraintEnd_toEndOf="@+id/download_btn"-->
<!--                    app:layout_constraintStart_toStartOf="@+id/download_btn"-->
<!--                    app:layout_constraintTop_toTopOf="@+id/download_btn"-->
<!--                    tools:visibility="invisible" />-->
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/info_downloads"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/light_grey3"
            android:layout_weight="1"
            android:layout_gravity="center">
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"/>
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/fire" />
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/txt_countDownloads"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="123" />
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_grey3"
        android:paddingHorizontal="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- Add your content here -->
        <TextView
            android:id="@+id/txt_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="Amid the ongoing deadly power struggle between the top military leaders of Sudan, evacuations have begun, including as part of India’s Operation Kaveri, which has helped more than 3,500 Indian citizens living in the country. Raghuveer Sharma is one of them. He gave UN News a first-hand account of the tragic situation unfolding in Sudan.The World Health Organization (WHO) declared an end to the COVID-19 global public health emergency on 3 May 2023, following more than three years of crisis, and slow recovery – although the virus continues to kill and mutate. UN photographers across the world have captured moments of agony, innovation, and human endurance throughout the pandemic, which has killed nearly seven million people, and infected over 765 million.The number of internally displaced (IDPs) in Sudan has more than doubled in just the last week, since armed clashes erupted between rival militaries in multiple cities across Sudan, the International Organization for Migration (IOM) said on Tuesday.The values of human dignity and freedom, enshrined in the UN’s founding Charter in 1945, have never been so under threat, warned the Secretary-General on Tuesday, delivering a wide-ranging speech in Spain after receiving the Carlos V European Award."/>


    </androidx.core.widget.NestedScrollView>


        <FrameLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/bg_to_read_btn"
            android:gravity="center_vertical"
            android:layout_gravity="bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="8dp">

            <TextView
                android:id="@+id/juklewdi_baslaw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:visibility="gone"
                android:fontFamily="@font/sf_pro_semi_bold"
                android:text="@string/juklewdi_baslaw"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ProgressBar
                android:id="@id/progress"
                android:layout_width="40dp"
                android:visibility="gone"
                android:layout_gravity="center"
                android:layout_height="40dp"/>

            <TextView
                android:id="@+id/start_reading_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:visibility="gone"
                android:layout_gravity="center"
                android:fontFamily="@font/sf_pro_semi_bold"
                android:text="@string/start_reading"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>